--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Built application files
 *.apk
 *.ap_
-
+*.iml
 # Files for the Dalvik VM
 *.dex
 
@@ -15,6 +15,8 @@ gen/
 # Gradle files
 .gradle/
 build/
+
+.idea/*
 
 # Local configuration file (sdk path, etc)
 local.properties
