--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ gen/
 # Gradle files
 .gradle/
 build/
-
-/.idea/*
+/.idea/workspace.xml
+.idea/*
 
 # Local configuration file (sdk path, etc)
 local.properties
